temporarily removed wave animation

--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ p {
 	animation-iteration-count: infinite;
 }
 
-.ocean {
+/* .ocean {
 	height: 5%;
 	width: 100%;
 	position: absolute;
@@ -148,7 +148,6 @@ p {
 }
 
 .wave:nth-of-type(2) {
-	/* top: -175px; */
 	animation: wave 7s cubic-bezier(0.36, 0.45, 0.63, 0.53) -0.125s infinite,
 		swell 7s ease -1.25s infinite;
 	opacity: 1;
@@ -171,7 +170,7 @@ p {
 	50% {
 		transform: translate3d(0, 5px, 0);
 	}
-}
+} */
 
 @media only screen and (max-width: 800px) {
 	img {
