--- a/style.css
+++ b/style.css
@@ -48,6 +48,10 @@ nav ul li a {
 	text-transform: uppercase;
 	color: #f4f4f4;
 	font-weight: bold;
+	border: 1px solid black;
+	background-color: black;
+	border-radius: 5px;
+	padding: 7px;
 }
 
 section {
@@ -107,45 +111,72 @@ p {
 	margin: 10px;
 }
 
-/* Buzz */
-@-webkit-keyframes hvr-buzz {
-	50% {
-		-webkit-transform: translateX(3px) rotate(2deg);
-		transform: translateX(3px) rotate(2deg);
-	}
-	100% {
-		-webkit-transform: translateX(-3px) rotate(-2deg);
-		transform: translateX(-3px) rotate(-2deg);
-	}
-}
-@keyframes hvr-buzz {
-	50% {
-		-webkit-transform: translateX(3px) rotate(2deg);
-		transform: translateX(3px) rotate(2deg);
-	}
-	100% {
-		-webkit-transform: translateX(-3px) rotate(-2deg);
-		transform: translateX(-3px) rotate(-2deg);
-	}
-}
-.hvr-buzz {
+/* Grow */
+.hvr-grow {
 	display: inline-block;
 	vertical-align: middle;
 	-webkit-transform: perspective(1px) translateZ(0);
 	transform: perspective(1px) translateZ(0);
 	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+	-webkit-transition-duration: 0.3s;
+	transition-duration: 0.3s;
+	-webkit-transition-property: transform;
+	transition-property: transform;
 }
-.hvr-buzz:hover,
-.hvr-buzz:focus,
-.hvr-buzz:active {
-	-webkit-animation-name: hvr-buzz;
-	animation-name: hvr-buzz;
-	-webkit-animation-duration: 0.15s;
-	animation-duration: 0.15s;
-	-webkit-animation-timing-function: linear;
-	animation-timing-function: linear;
-	-webkit-animation-iteration-count: infinite;
-	animation-iteration-count: infinite;
+.hvr-grow:hover,
+.hvr-grow:focus,
+.hvr-grow:active {
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
+}
+
+/* Grow ends */
+
+/* Ripple In */
+@-webkit-keyframes hvr-ripple-in {
+	100% {
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		opacity: 1;
+	}
+}
+@keyframes hvr-ripple-in {
+	100% {
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		opacity: 1;
+	}
+}
+.hvr-ripple-in {
+	display: inline-block;
+	vertical-align: middle;
+	-webkit-transform: perspective(1px) translateZ(0);
+	transform: perspective(1px) translateZ(0);
+	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+	position: relative;
+}
+.hvr-ripple-in:before {
+	content: '';
+	position: absolute;
+	border: black solid 4px;
+	border-radius: 7px;
+	top: -12px;
+	right: -12px;
+	bottom: -12px;
+	left: -12px;
+	opacity: 0;
+	-webkit-animation-duration: 1s;
+	animation-duration: 1s;
+}
+.hvr-ripple-in:hover:before,
+.hvr-ripple-in:focus:before,
+.hvr-ripple-in:active:before {
+	-webkit-animation-name: hvr-ripple-in;
+	animation-name: hvr-ripple-in;
 }
 
 .muzieknootjes {
