--- a/style.css
+++ b/style.css
@@ -36,14 +36,15 @@ nav ul {
 	display: flex;
 	width: 100%;
 	justify-content: center;
+	margin-right: 15px;
 }
 
 #title {
 	position: absolute;
 	left: 0;
 	top: 0;
-	margin-top: 15px;
-	margin-left: 15px;
+	margin: 7px;
+	padding: 1rem;
 	text-decoration: none;
 	font-weight: bold;
 	color: rgb(23, 164, 219);
@@ -54,7 +55,6 @@ nav ul {
 }
 
 nav ul li {
-	margin: 0 1rem;
 	padding: 1rem;
 }
 
@@ -63,7 +63,7 @@ nav ul li a {
 	text-transform: uppercase;
 	color: black;
 	font-weight: bold;
-	border: 1px solid black;
+	border: 1px solid rgb(23, 164, 219);
 	background-color: rgb(23, 164, 219);
 	border-radius: 5px;
 	padding: 7px;
